--- a/it/youtube/_posts/2022-01-23-subscribe-100.md
+++ b/it/youtube/_posts/2022-01-23-subscribe-100.md
@@ -4,7 +4,7 @@ sidebar:
   nav: sidebar-it
   icon: "fas fa-mobile-alt"
 title: "[YouTube] 구독자 100명 모으기"
-toc: false
+toc: true
 toc_sticky: true
 toc_label: 목차
 tag: "YouTube"
@@ -14,69 +14,101 @@ header:
   overlay_image: https://drive.google.com/uc?export=view&id=1590Tc5RVGa4XGUOcu7sWUuXurqT8ekvW
 excerpt: "초보 유튜버의 기록"
 ---
-2022년 1월 5일 첫 영상을 업로드 했따. 유튜브를 시작한지 19일 되었다. 필자는 아주 초보 유튜버이다.  
-2주만에 유튜브 구독자 100명을 달성하여 너무 기쁘고, 구독자 분들에게 감사한 마음을 기록을 담으려고 한다.  
 필자는 절대로 자랑하려고, 내 채널을 홍보하려고 쓰는 글이 아님을 미리 밝힌다.  
+필자는 아주 초보 유튜버이며 첫 영상을 업로드한지 약 2~3주 정도에 100명을 달성했다. 
 
-처음 시작한 초심을 잃지 않고 고민했던 것, 작은 경험을 기록하는 것이며, 목표한 구독자 300명을 계속 고민 할 것이다.  
+너무 기쁘고, 구독자 분들에게 감사한 마음과 함께 그간 고민했던 것을 작은 경험을 기록한다.  
 
-이 글은 구독자 100명을 모으기 위한 정답이 아닐 것이다. 다만 누군가 유튜브를 시작한다면, 이 글이 도움이 되고, 참고가 되길 바란다. 
+이 글은 구독자 100명을 모으기 위한 정답이 아닐 것이다. 다만 누군가 유튜브 채널을 시작하고 구독자 100명이 목표라면 도움이 되고, 참고가 되길 바란다. 
 
-필자는 유튜브를 시작하고 구독자 100명을 어떻게 모을 수 있는지, 구글 검색, 유튜브 검색을 통해 여러 정보를 보았다.  
-너무 까마득 했기 때문이다.
+## 정보 수집
+필자는 유튜브를 채널 운영, 노하우 등을 시작하고 구독자 100명을 어떻게 모을 수 있는지을 통해 여러 정보를 검색했다.
+
+* 구글 검색
+* 유튜브 검색
+* 네이버 블로그 검색
+
+검색 결과에 업체에서 업로드했거나, 유료결제를 유도하는 글은 보지 않았으며, 일반인이 운영하는 채널 위주의 정보들을 자기 전 읽었다.
 
 ## 소중한 구독자
--- 쓰자
-![Image](https://drive.google.com/uc?export=view&id=1jomp5IozxveczL3RxPhDPWSVTxqeXzl9)
+100명 달성의 순간.  
+감격한 나머지 계속 새로고침하고 캡쳐했다.  
 
-![Image](https://drive.google.com/uc?export=view&id=1fKGlw6-beXbmKDEZlutMOBXhySuBH8OJ)
+99명에서 100명이 되기 까지 한 6시간은 걸린 것 같다.  
+구독해주신 분들께 선물이라도 드리고 싶은 심정이다.  
+![Image](https://drive.google.com/uc?export=view&id=1jomp5IozxveczL3RxPhDPWSVTxqeXzl9)![Image](https://drive.google.com/uc?export=view&id=19gvwd071-uo2Fre7I5eIzJzUpYsybZ4x)![Image](https://drive.google.com/uc?export=view&id=1fKGlw6-beXbmKDEZlutMOBXhySuBH8OJ)![Image](https://drive.google.com/uc?export=view&id=1RLIicTPUelQIE_OBvW4qAInChdoV6lxf)
 
-![Image](https://drive.google.com/uc?export=view&id=1RLIicTPUelQIE_OBvW4qAInChdoV6lxf)
 
-![Image](https://drive.google.com/uc?export=view&id=166dwDTecWVrcLmSiyYct90C67i_HVFeN)
 
-![Image](https://drive.google.com/uc?export=view&id=1aD4IZRkdpjeUFdXbQdj2y9LwnLTYTRvg)
 
-### 초기 구독자는 가족이다.
-초기 구독자는 매우 중요하다. 필자 채널 또한 초기 구독자는 가족이다.  
 
-구독자 모으는 방법 등을 보면 지인들은 좋지 않은 구독자이며, 구글 알고리즘을 망친다고 한다. 그것은 맞을수도, 틀릴수도 있는 말이다. 내가 하는 게임을 컨텐츠로 하는 채널이라면, 게임에 관심없는 친구의 구독은 의미가 없을 수 있다. 하지만 사랑하는 가족이라면 내가 좋아하는 것을 좋아해 줄 수 있다. 왜 초기 구독자가 중요한가? 에 대한 필자의 답은 이렇다.
+### 초기 구독자를 모으자.
+초기 구독자는 매우 중요하다. 필자의 채널 초기 구독자는 가족이다.  
 
-유튜브를 시작해보니 기대처럼 늘지 않는 채널의 성장에 구독자 30명, 60명의 다른 채널이 부럽고 대단해 보였다. 실제로 대단하다.  
+구독자 모으는 방법 등을 검색해보면 지인들은 좋지 않은 구독자이며, 구글 알고리즘을 망친다고 한다. 그것은 맞을수도, 틀릴수도 있는 말이다. 내가 하는 게임을 컨텐츠로 하는 채널이라면, 게임에 관심없는 친구의 구독은 의미가 없을 수 있다. 하지만 사랑하는 가족이라면 내가 좋아하는 것을 좋아해 줄 수 있다. 왜 초기 구독자가 중요한가? 에 대한 필자의 답은 이렇다.
 
-구독자 1명, 4명, 9명 등 조금씩 성장하고 조회수가 늘어나고, 댓글이 어쩌다 하나라도 달려야 재미를 느끼고 더 열심히 할 수 있다. 아무도 보지 않는다면 외롭고 힘들고 지칠 것이다.  
+구독자 1명, 4명, 9명 등 조금씩 성장하고 조회수가 늘어나고, 댓글이 있어야 재미를 느끼고 더 열심히 할 수 있다. 아무도 보지 않는다면 외롭고 힘들고 지칠 것이다.  
 
-초기 구독자인 가족이 멘탈관리에 든든한 지원이 될 것이며, 가족이 바로 내 채널을 볼 수 있기 때문에, 영상 제작에 더 열심히 할 수 있다.
+누군가의 반응은 멘탈관리에 든든한 지원이 될 것이다. 필자의 경우 가족이 바로 내 채널을 볼 수 있기 때문에, 운영과 영상 제작에 더 열심히 할 수 있었다.
 
 ### 시청자와의 소통
+시청자의 댓글이 많지 않다. 당연히 소중한 댓글이기에 하나하나 좋아요와 답글을 달아주었다.  
+갑자기 밀려오는 시기엔 답글을 놓친 영상도 있지만, 좋아요는 100% 모두 눌렀다.
+
+크리에이터가 반응해주면 시청자는 설정에 따라 알림이 갈 것이고 재 방문할 가능성이 높아질 것이다.  
 
 ## 꾸준함
+필자는 조회수가 없을때도 영상 제적을 해서 내 채널의 조회수를 확인하지 않았다. 그 시간에 아이디어를 찾고 편집하고 영상을 지속적으로 업로드 했다.
+초반엔 어려웠으나 편집하는 것도 속도가 점점 빨라졌으며 최근 많은 영상을 올렸다.
+
+* 영상 업로드 히스토리
+  * 2022.01.05 첫영상 1개 
+  * 2022.01.07 1개
+  * 2022.01.10 1개(이후 삭제)
+  * 2022.01.12 2개
+  * 2022.01.13 1개
+  * 2022.01.14 2개
+  * 2022.01.15 1개
+  * 2022.01.16 1개
+  * 2022.01.17 1개
+  * 2022.01.18 1개
+  * 2022.01.20 1개
+  * 2022.01.21 1개
+  * 2022.01.22 1개
+  * 2022.01.23 1개
+  * 2022.01.24 1개
+  
+필자의 영상은 대부분 shorts 영상이며 30초가 안되는 영상이 대부분이기 때문에 빠르게 편집하여 올릴 수 있는 것이 장점이다.
+
 
 ## 멘탈.
-유튜브 초기에는 멘탈이 정말 정말 아주 아주 중요하다.
-멘탈을 잡아야 한다. 
-아마 멘탈은 계속 중요할 것이다. 생각지 못한 댓글이 달리기도 한다.  
-그래도 그것도 관심으로 생각하고 좋아요를 누를 수 있는 멘탈을 갖게 되었다.  
+유튜브 초기에는 멘탈이 정말 정말 아주 아주 중요하다. 왜냐하면 반응 자체가 없기 때문이다.  
+생각지 못한 댓글이 달리기도 하지만, 관심으로 생각하고 좋아요를 누를 수 있는 멘탈을 갖자.  
 
 ## 좋은 컨텐츠
-필자도 좋은 컨텐츠가 무엇인지 잘 모른다. 다만, 좋은 컨텐츠는 구글, 틱톡의 알고리즘이 잘 캐치한다.    
-업로드된 영상을 분석하여 두 플랫폼 모두 같은 영상에 대한 추천을 했고,
-추천된 영상만 조회수가 급상승 했다. 다른 영상에 비교하면 조회수의 비율도 비슷했다. 
-알고리즘은 좋은 컨텐츠를 알아볼 수 있는 능력이 있고 대단함을 느꼈다.
-좋은 컨텐츠라면 반드시 구글 알고리즘이 많은 사람에게 추천해 줄 것이다.
+필자도 좋은 컨텐츠가 무엇인지 잘 모른다. 그런데 좋은 컨텐츠는 구글, 틱톡 등의 알고리즘이 잘 캐치한다.    
+업로드된 영상은 두 플랫폼과 시간의 차이가 있으나, 대부분 비슷한 비율로 조회수가 올라간다. 
+알고리즘은 좋은 컨텐츠를 알아볼 수 있는 능력이 있음을 알게되었고 대단함을 느꼈다.
+좋은 컨텐츠라면 반드시 알고리즘이 많은 사람에게 추천해 줄 것이다.
+
+좋은 컨텐츠를 모르는데 그럼 어떻게 좋은 컨텐츠를 만들어야 하나? 란 고민이 생긴다.  
+필자의 경우 양 플랫폼에서 조회수가 잘 올라가는 컨텐츠, 결국 시청자의 반응이 좋은 컨텐츠를 파악하여 비슷한 컨셉의 영상을 제작했다.  
 
 ### 편집 툴
+* Final Cut Pro
+* Keynote
+* Pixelmator Pro
 
 ## Shorts
 -- 쓰자
 
 ## 목표
--- 쓰지
-엄마는 처음이라.
-초음파 아기,
-아기 인터뷰,
-아기 서로서로 퀴즈
-인물퀴즈
+-- 쓰자
+* 엄마는 처음이라.
+* 초음파 아기,
+* 아기 인터뷰,
+* 아기 서로서로 퀴즈
+* 인물퀴즈
 
 
 ## 꾸미자
@@ -89,12 +121,20 @@ excerpt: "초보 유튜버의 기록"
  
 ### 아이콘을 꾸미자.
 -- 쓰자
-![Image](https://drive.google.com/uc?export=view&id=19gvwd071-uo2Fre7I5eIzJzUpYsybZ4x)
+![Image](https://drive.google.com/uc?export=view&id=166dwDTecWVrcLmSiyYct90C67i_HVFeN)
  
 ### 미리보기를 꾸미자.
 ![Image](https://drive.google.com/uc?export=view&id=11J01XTqgtnJ3-dbeCYoJj2l2z50hmLkd)  
-어떤 미리보기가 눈에 띄는가? 필자의 유튜브 메인 페이지다. 식당에 가면 맛있는 메뉴판을 보는 듯 하다. 시청자분들도 어떤 영상을 볼지 이리저리 눈에 띄는 것을 먼저 볼 것이다. 
+유튜브 메인 페이지다. 어떤 미리보기가 눈에 띄는가? 
+
+식당에 있는메뉴판을 보는 듯 하다. 눈에 띄어야 한다.
 -- 쓰자
+
+### 영상에 효과음을 넣자.
+
+### 영상에 배경음을 넣자.
+
+### 영상에 효과를 주자.
 
 ## 타사와 연동하자.
 ### 인스타그램
@@ -123,3 +163,8 @@ excerpt: "초보 유튜버의 기록"
 ![Image](https://drive.google.com/uc?export=view&id=1nm0QF3fPt5WvphuArmO4IA6V5HrfOCgu)
 
 ![Image](https://drive.google.com/uc?export=view&id=1hwrX3z8XyUVmpNM8EnhQBq0HWkfCTDFt)
+
+앞으로 목표한 구독자 300명을 계속 고민 할 것이다.  
+다시 한번 구독을 해주신 구독자 분들께 감사의 마음을 전한다.  
+
+![Image](https://drive.google.com/uc?export=view&id=1aD4IZRkdpjeUFdXbQdj2y9LwnLTYTRvg)
