--- a/it/youtube/_posts/2022-01-23-subscribe-100.md
+++ b/it/youtube/_posts/2022-01-23-subscribe-100.md
@@ -58,7 +58,7 @@ excerpt: "초보 유튜버의 기록"
 크리에이터가 반응해주면 시청자는 설정에 따라 알림이 갈 것이고 재 방문할 가능성이 높아질 것이다.  
 
 ## 꾸준함
-필자는 조회수가 없을때도 영상 제적을 해서 내 채널의 조회수를 확인하지 않았다. 그 시간에 아이디어를 찾고 편집하고 영상을 지속적으로 업로드 했다.
+필자는 조회수가 없을때도 영상 제작을 해서 내 채널의 조회수를 확인하지 않았다. 그 시간에 아이디어를 찾고 편집하고 영상을 지속적으로 업로드 했다.
 초반엔 어려웠으나 편집하는 것도 속도가 점점 빨라졌으며 최근 많은 영상을 올렸다.
 
 * 영상 업로드 히스토리
@@ -80,6 +80,7 @@ excerpt: "초보 유튜버의 기록"
   
 필자의 영상은 대부분 shorts 영상이며 30초가 안되는 영상이 대부분이기 때문에 빠르게 편집하여 올릴 수 있는 것이 장점이다.
 
+> 삭제한 영상은 틱톡 로고가 있는 영상이었다. 유튜브에 올리지 말자. 추후 걸림돌이 된다고 한다.
 
 ## 멘탈.
 유튜브 초기에는 멘탈이 정말 정말 아주 아주 중요하다. 왜냐하면 반응 자체가 없기 때문이다.  
