[Fix] 첫 문장 변경

--- a/clean/think/_posts/2018-09-05-today.md
+++ b/clean/think/_posts/2018-09-05-today.md
@@ -7,7 +7,7 @@ title: "오늘"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 오늘하는 일이 재밌었는가?  어제보다 오늘 만든 것이 더 좋은가?
+tag: "Think"
 depth: 
   - title: "Clean"
     url: /clean/
@@ -16,13 +16,14 @@ depth:
     url: /clean/think/
     icon: "far fa-folder-open"
 ---
-오늘 따라 일이 적다.  
+오늘하는 일이 재밌었는가? 어제보다 오늘 만든 것이 더 좋은가?  
 
 >내가 만약 죽는 다면, 죽는 순간에 이 타이밍을 돌아본다면, 결론은 아무것도 아니다.<br/>
 잴 필요 없다.<br/>
 마음이 원하는 만큼 가자. 아끼지 말고 가자.<br/><br/>
 또! 오해영 대사 중
 
+오늘 따라 일이 적다.  
 드라마 참 재밌다. 오늘은 놀자!
 
 ## 오늘 하는 일이 재밌었는가? 
