--- a/it/youtube/_posts/2022-01-23-subscribe-100.md
+++ b/it/youtube/_posts/2022-01-23-subscribe-100.md
@@ -5,7 +5,7 @@ sidebar:
   icon: "fas fa-mobile-alt"
 title: "[YouTube] 구독자 100명 모으기"
 toc: true
-toc_sticky: true
+toc_sticky: false
 toc_label: 목차
 tag: "YouTube"
 header:
@@ -15,7 +15,7 @@ header:
 excerpt: "초보 유튜버의 기록"
 ---
 필자는 절대로 자랑하려고, 내 채널을 홍보하려고 쓰는 글이 아님을 미리 밝힌다.  
-필자는 아주 초보 유튜버이며 첫 영상을 업로드한지 약 2~3주 정도에 100명을 달성했다. 
+필자는 완전 초보이며 첫 영상을 업로드하고 정말 운좋게도 약 2~3주 정도에 100명을 달성했다. 
 
 너무 기쁘고, 구독자 분들에게 감사한 마음과 함께 그간 고민했던 것을 작은 경험을 기록한다.  
 
@@ -51,11 +51,14 @@ excerpt: "초보 유튜버의 기록"
 
 누군가의 반응은 멘탈관리에 든든한 지원이 될 것이다. 필자의 경우 가족이 바로 내 채널을 볼 수 있기 때문에, 운영과 영상 제작에 더 열심히 할 수 있었다.
 
+필자는 지인에게는 알리지 않았고, 가족과 와이프 처가까지 하여 10명으로 시작하였다.
+
 ### 시청자와의 소통
 시청자의 댓글이 많지 않다. 당연히 소중한 댓글이기에 하나하나 좋아요와 답글을 달아주었다.  
 갑자기 밀려오는 시기엔 답글을 놓친 영상도 있지만, 좋아요는 100% 모두 눌렀다.
 
 크리에이터가 반응해주면 시청자는 설정에 따라 알림이 갈 것이고 재 방문할 가능성이 높아질 것이다.  
+>실 사례가 있는데, 틱톡에서 답글을 친절하게 남겨드렸더니 바로 팔로우를 하셨다.
 
 ## 꾸준함
 필자는 조회수가 없을때도 영상 제작을 해서 내 채널의 조회수를 확인하지 않았다. 그 시간에 아이디어를 찾고 편집하고 영상을 지속적으로 업로드 했다.
@@ -81,10 +84,6 @@ excerpt: "초보 유튜버의 기록"
 필자의 영상은 대부분 shorts 영상이며 30초가 안되는 영상이 대부분이기 때문에 빠르게 편집하여 올릴 수 있는 것이 장점이다.
 
 > 삭제한 영상은 틱톡 로고가 있는 영상이었다. 유튜브에 올리지 말자. 추후 걸림돌이 된다고 한다.
-
-## 멘탈.
-유튜브 초기에는 멘탈이 정말 정말 아주 아주 중요하다. 왜냐하면 반응 자체가 없기 때문이다.  
-생각지 못한 댓글이 달리기도 하지만, 관심으로 생각하고 좋아요를 누를 수 있는 멘탈을 갖자.  
 
 ## 좋은 컨텐츠
 필자도 좋은 컨텐츠가 무엇인지 잘 모른다. 그런데 좋은 컨텐츠는 구글, 틱톡 등의 알고리즘이 잘 캐치한다.    
@@ -160,12 +159,5 @@ excerpt: "초보 유튜버의 기록"
 ## 홍보는 조심히.
 
 
-## 분석
-![Image](https://drive.google.com/uc?export=view&id=1nm0QF3fPt5WvphuArmO4IA6V5HrfOCgu)
-
-![Image](https://drive.google.com/uc?export=view&id=1hwrX3z8XyUVmpNM8EnhQBq0HWkfCTDFt)
-
-앞으로 목표한 구독자 300명을 계속 고민 할 것이다.  
-다시 한번 구독을 해주신 구독자 분들께 감사의 마음을 전한다.  
-
 ![Image](https://drive.google.com/uc?export=view&id=1aD4IZRkdpjeUFdXbQdj2y9LwnLTYTRvg)
+다시 한번 구독을 해주신 구독자 분들께 감사의 마음을 전한다.  
