--- a/it/youtube/_posts/2022-02-09-1-month.md
+++ b/it/youtube/_posts/2022-02-09-1-month.md
@@ -26,15 +26,18 @@ excerpt: "초보 유튜버의 기록"
 구독자가 늘기는커녕 유지도 매우 어려운데, 감소하고 증가하고를 반복하여 약 2주간 구독자가 제자리다.
 
 ![Image](https://drive.google.com/uc?export=view&id=1hwrX3z8XyUVmpNM8EnhQBq0HWkfCTDFt)  
-이것은 필자가 구독자분들의 기대에 못 미치는 영상을 올린 것이 원인이라고 생각했다. 
 
+유튜브 스튜디오의 분석을 보고 분석하고 원인을 찾기 매우 어렵다. 경험이 없는 필자에겐 정말 더 어려웠다.  
+조회수나 조아요, 시청 지속 시간, 노출 등 지표가 영상마다 크게 차이가 있고, 날마다 비슷하지도 않고 변동성이 엄청 심하기 때문이다.
+
+다만 이런 지표를 참고하여 원인을 찾아야 더 좋은 결과로 나올것이라고 생각했고 필자의 결론은 구독자분들의 기대에 못 미치는 영상을 올린 것이 원인이라고 생각했다. 
 * 구독자분들의 니즈를 충족하지 못한 점
   * 내가 만들고 싶은 영상을 고집해서 업로드 함
   * 내가 업로드 하기 쉬운 편집 없이 올릴 수 있는 간단한 영상을 업로드 함
+  * 주제와 상관 없는 영상을 업로드 함
     
 이기적인 판단에서의 실수라고 생각한다. 앞으로는 구독자분들이 원하는 영상이 무엇인지 분석이 필요하다고 판단했다.  
 조회수, 좋아요 기준으로 빠르게, 잘, 꾸준히 만들 수 있는 영상을 찾아 기획하고 싶다.
-
 
 ## 멘탈
 유튜브 초기에는 멘탈이 정말 정말 아주 아주 중요하다. 왜냐하면 반응 자체가 없기 때문이다.  
