--- a/it/youtube/_posts/2022-02-09-1-month.md
+++ b/it/youtube/_posts/2022-02-09-1-month.md
@@ -37,7 +37,9 @@ excerpt: "초보 유튜버의 기록"
   * 주제와 상관 없는 영상을 업로드 함
     
 이기적인 판단에서의 실수라고 생각한다. 앞으로는 구독자분들이 원하는 영상이 무엇인지 분석이 필요하다고 판단했다.  
-조회수, 좋아요 기준으로 빠르게, 잘, 꾸준히 만들 수 있는 영상을 찾아 기획하고 싶다.
+다음 영상으로 산후조리원 영상을 제작하려고 하며, 검색을 통해 조회수 기준으로 다른 영상들을 참고하여 만들어 볼 예정이다.
+
+중기적으로 조회수, 좋아요 기준으로 빠르게, 잘, 꾸준히 만들 수 있는 영상을 찾아 기획하고 싶다.
 
 ## 멘탈
 유튜브 초기에는 멘탈이 정말 정말 아주 아주 중요하다. 왜냐하면 반응 자체가 없기 때문이다.  
@@ -61,6 +63,24 @@ shorts로 영상으로 채운 유튜브 채널은 컨텐츠 소비로 끝나는 
 
 >5만, 10만 이상 유튜버가 이 글을 보셨다면 필자를 가르쳐 주세요!
 
+## 수소문
+필자의 채널 분석을 통해 30~40대 여상, 60~70세의 여성이 구독자가 많았다.  
+필자는 직장인이기 때문에 주위에 계신 여성 직원분께 재미있게 보는 채널을 여쭤보고 메모했다.
+`채널 십오야` 와 같은 유명 채널은 제외했다.
 
+* 20대 후반
+  * 마리아주 [맛있는 마담]
+  * 스튜디오 와플
+  * 박막레 할머니
+  * 오킹TV
+* 30대 후반
+  * 도시오리
+  * 집밥 요리
+  * 서울 부부의 귀촌일기
+
+현재는 수소문만 한 상태이며😭, 채널은 이후 조금씩 보려고 한다.
+
+## 구독은 무료입니다.
+타 유튜브 채널에서 60세 이상 구독자가 많은 채널은 구독은 무료라는 문구를 추가해 구독을 유도하라는 영상을 참고할 예정이다.
 
 
