[Fix] 문구가 매우 어색함

--- a/it/youtube/_posts/2022-02-09-1-month.md
+++ b/it/youtube/_posts/2022-02-09-1-month.md
@@ -50,13 +50,13 @@ excerpt: "초보 유튜버의 기록"
 
 다만 shorts로 채워지는 채널이 구독으로 이어지기는 너무 어려운 듯 하다.  
 유튜브 특성상 구독으로 이어지기 까지 정말 재미있거나, 정보를 잘 전달하거나 둘 중 하나인데
-shorts로 영상으로 채운 유튜브 채널은 컨텐츠 소비로 끝나는 경우가 대부분이라고 느꼈다.
+shorts로 영상으로 채운 유튜브 채널은 정말 재미있고 신선하지 않으면 컨텐츠 소비로 끝나는 경우가 대부분이라고 느꼈다.
 
 그래서 약 5분 영상을 처음으로 편집해서 올려보았는데, 처음해보는 5분 영상을 기획하고 편집하는 것은 매우 어렵고,
 고도의 기술과 숙련이 필요함을 느꼈다.  
 
 ## 긍정적인 부분
-사실상 지표는 좋지 않다. 유령 구독자라고, 구독자가 있긴 하나, 조회수로 잘 이어지지 않는다.
+사실상 지표는 좋지 않다. 구독자분들이 점점 유령 구독자로 변해감을 느꼈다. 구독자 수에 비해 조회수로 잘 이어지지 않는다.
 노출 지표, 조회수 모두 감소하고 있으며 구독자 또한 증가 추세가 아니다.
 
 다만 타 플랫폼에서 은근 반응이 있기 때문에 필자는 아직은 유튜브 영상 편집, 운영이 재미있다는 것이 매우 긍정적인 부분이다.
