--- a/it/youtube/_posts/2022-02-09-1-month.md
+++ b/it/youtube/_posts/2022-02-09-1-month.md
@@ -27,7 +27,7 @@ excerpt: "초보 유튜버의 기록"
 
 ![Image](https://drive.google.com/uc?export=view&id=1hwrX3z8XyUVmpNM8EnhQBq0HWkfCTDFt)  
 
-유튜브 스튜디오의 분석을 보고 구독자나 조회수가 제자리인 문제를 분석하고 원인을 찾기 매우 어려웠다. 경험이 없는 필자에겐 정말 더 어려웠다.  
+유튜브 스튜디오의 분석을 보고 구독자나 조회수가 제자리인 문제를 분석하고 원인을 찾는 것은 필자와 같은 경험이 없는 초보에겐 정말 어렵다.  
 조회수나 좋아요, 시청 지속 시간, 노출 등 지표가 영상마다 크게 차이가 있고, 날마다 비슷하지도 않고 변동성이 엄청 심하기 때문이다.
 
 다만 이런 지표를 참고하여 원인을 찾아야 더 좋은 결과로 나올것이라고 생각했고 필자의 결론은 구독자분들의 기대에 못 미치는 영상을 올린 것이 원인이라고 생각했다. 
