--- a/swift/dateformatter/_posts/2022-01-19-is24hour.md
+++ b/swift/dateformatter/_posts/2022-01-19-is24hour.md
@@ -22,6 +22,6 @@ DateFormatter를 사용하면 이를 해결 가능하다.
 ![Image](https://drive.google.com/uc?export=view&id=1Vxd5-WiWPrheN6l1x2qm0Tp7SzvI5ygG)
 
 ```swift
+let dateFormatter = DateFormatter()
 dateFormatter.dateStyle = .medium
-}
 ```
