--- a/it/youtube/_posts/2022-01-23-subscribe-100.md
+++ b/it/youtube/_posts/2022-01-23-subscribe-100.md
@@ -15,11 +15,11 @@ header:
 excerpt: "초보 유튜버의 기록"
 ---
 필자는 절대로 자랑하려고, 내 채널을 홍보하려고 쓰는 글이 아님을 미리 밝힌다.  
-필자는 완전 초보이며 첫 영상을 업로드하고 정말 운좋게도 약 2~3주 정도에 100명을 달성했다. 
+필자는 완전 초보이며 첫 영상을 업로드하고 정말 `운`좋게도 약 약3주 정도에 100명을 달성했다. 
 
 너무 기쁘고, 구독자 분들에게 감사한 마음과 함께 그간 고민했던 것을 작은 경험을 기록한다.  
 
-이 글은 구독자 100명을 모으기 위한 정답이 아닐 것이다. 다만 누군가 유튜브 채널을 시작하고 구독자 100명이 목표라면 도움이 되고, 참고가 되길 바란다. 
+이 글은 구독자 100명을 모으기 위한 정답이 아닐 것이다. 이 글 자체가 조심스럽고, 자랑하는 것처럼 비추어 질까봐 망설여진다. 필자 역시 앞으로 생길 좌절과 고독 등 험난한 여정이 있을 것을 알고 있기 때문에, 운좋게도 달성한 첫 미션을 잊지 않고 기록하고자 적는다. 또한, 누군가에겐 힘이 되길 바라며 글을 쓴다. 누군가 유튜브 채널을 시작하고 구독자 100명이 목표라면 도움이 되고, 참고가 되었으면 좋겠다.   
 
 ## 정보 조사
 유튜브를 채널 운영, 노하우 등을 시작하고 구독자 100명을 어떻게 모을 수 있는지을 통해 여러 정보를 검색했다.
@@ -116,6 +116,7 @@ excerpt: "초보 유튜버의 기록"
 ## 꾸미자
 다른 유튜버의 정보에서 많이 공감한 것인데, 채널을 꾸며야 한다. 다른 사람이 봤을 때 이 채널은 `뭐가 있긴 있네?` 하는 정도로 꾸며야 한다. 
 ### 영상을 늘리자.
+-- 쓰자
  
 ### 베너를 꾸미자.
 -- 쓰자
