--- a/it/youtube/_posts/2022-03-06-2-month.md
+++ b/it/youtube/_posts/2022-03-06-2-month.md
@@ -14,28 +14,25 @@ header:
   overlay_image: https://images.roa.ai/articles/2020/02/youtube.png
 excerpt: "초보 유튜버의 기록"
 ---
-취미로 유튜브를 하고 있다. 2달 운영 결과 조금은 기운이 나는 1 달이었다.  
-거의 바닥을 찍다가 조금씩 회복하는 모습이다.  
+취미로 유튜브를 하고 있다. 2달 운영 결과 조금은 기운이 나는 1달이었다.  
+조회수와 구독자 증가율은 거의 바닥을 찍다가 조금씩 회복하는 모습이다.  
 
-하지만 필자는 부족한 하꼬 업로더일 뿐이다.  
-더 만족할만한 결과를 내고 싶고 3달 회고는 어떻게 될지 궁금해진다.
+필자는 부족한 하꼬 업로더일 뿐이다.  
+앞으로 만족할만한 결과를 내고 싶고 3달 운영 회고는 어떻게 될지 궁금해진다.
 
 ## 분석
-## 구독자 추세
+### 구독자 추세
 ![Image](https://drive.google.com/uc?export=view&id=1Gzq2ejcmEBHOiErFd6rsxn158YUMoASk)  
 구독자 200명을 달성했다. 현재는 204명이다. 구독자 분들께 너무 감사하다.
 
 ![Image](https://drive.google.com/uc?export=view&id=1cinUycR9iQ2wpVZRv0hFjhjtkCueozaf)  
 구독자 추세이다. 2022-02-10은 구독자가 이탈했으며, 2022-02-15일부터 거의 바닥으로 0명에 수렴했다.  
-좌절한 나머지 영상 업로드도 주춤했다. 하지만 계속 1일 1 영상을 의식하고 업로드했다. 눈에 띄는 정도는 아니지만 이후 다시 구독자가 증가했다.   
+영상 업로드도 주춤했다. 하지만 좌절하지 않고 계속 1일 1영상을 의식하고 업로드했다. 눈에 띄는 정도는 아니지만 이후 다시 구독자가 증가했다.   
  
-## 주회수 추세
+### 주회수 추세
 ![Image](https://drive.google.com/uc?export=view&id=1L1de8qap8VneteRy46qkexUbY6GWDvai)  
-유튜브 알고리즘은 알다가도 모르겠다.  
-어떤 영상은 업로드 이후 24시간 이후부터 48시간까지 Shorts피드에 노출을 시켜줘서 200~800 조회수가 나왔다. 
-하지만 반응 없는 영상은 일주일이 지나도 노출이 안되어 10~20 조회수를 기록하는 등 들쑥날쑥했다.  
-이것은 영상이 재미없는 것일 수도 있으나 틱톡에서는 조회수와 좋아요가 반응 있는 영상임에도 유튜브에서는 알고리즘의 선택을 받지 못한 경우가 있었다.   
-
+유튜브 알고리즘은 어떤 영상은 업로드 이후 24시간 이후부터 48시간까지 Shorts피드에 노출을 시켜줘서 200~800 조회수가 나왔다. 하지만 다른 영상은 일주일이 지나도 노출이 안되어 10~20 조회수를 기록하며 반응이 없었다.  
+반응 없는 영상은 재미없는 것일 수도 있으나 틱톡에서는 조회수와 좋아요가 반응 있음에도 유튜브에서는 알고리즘의 선택을 받지 못한 경우가 있었다. 틱톡과 유튜브는 확실히 이용자의 성향이나 목적이 다르다. 그래서 일까? 더 분석이 필요하다.
 
 ## 실수의 반복
 지난 회고의 실수이다.
@@ -44,8 +41,7 @@ excerpt: "초보 유튜버의 기록"
   * 내가 업로드하기 쉬운 편집 없이 올릴 수 있는 간단한 영상을 업로드함
   * 주제와 상관없는 영상을 업로드함
 
-필자는 기차를 본 아기 영상이 반응이 가장 좋았기 때문에 2탄으로 영상을 만들어서 업로드했다.  
-유튜브, 틱톡 모두 조회수는 1편에 비해 많이 부족하나 채널 전체의 조회수 평균보다 반응이 좋았다. 
+필자는 기차를 본 아기 영상이 반응이 가장 좋았기 때문에 2탄으로 영상을 만들어서 유튜브와 틱톡 모두 업로드했다. 유튜브, 틱톡 모두 조회수는 1편에 비해 많이 부족하나 채널 전체의 조회수 평균보다 반응이 좋았다. 
 
 
 ## 타 채널 분석
@@ -78,13 +74,14 @@ excerpt: "초보 유튜버의 기록"
 
 ## Shorts
 필자는 Shorts영상을 위주로 업로드 중이다. 평균 3~5회 Shorts 업로드 이후 1분 이상의 영상을 1회 업로드를 반복하고 있다.  
-필자의 채널은 조회수도 적고, 구독자도 적기 때문에 유튜브가 밀어주고 있는 Shorts를 믿고 최대한 많은 노출을 하는 전략이다.  
-또한, 1분 이상의 영상을 편집할 능력도, 소스도 부족하기 때문에 조금씩 연습을 하고 있다.  
+
+필자의 채널은 조회수도 적고, 구독자도 적기 때문에 유튜브가 밀어주고 있는 Shorts를 믿고 최대한 많은 노출을 하는 전략이다. 또한, 1분 이상의 영상을 편집할 능력도, 소스도 부족하기 때문에 조금씩 연습을 하고 있다.  
+
 어떤 주제로 1분 이상 영상을 제작할지 고민하며 기획하고 있다.  
 
 ## 타사와 연동하자.
-꼭 연동할 필요는 없지만, 멘탈 관리에 더 좋다. 
-1달 회고에서 멘탈이 가장 중요하다고 언급하였는데, 유튜브가 반응 없을 때 틱톡에서 힘을 얻고, 릴스에서 힘을 얻는 등 멘탈 관리에 매우 도움이 된다.
+결론은 꼭 연동할 필요는 없다. 하지만 멘탈 관리에 도움이 된다. 
+1달 회고에서 멘탈이 가장 중요하다고 언급하였는데, 유튜브가 반응 없을 때 틱톡에서 힘을 얻고, 릴스에서 힘을 얻는 등 반응 없는 초반에 마음을 추스리고 재미를 느끼는데 매우 도움이 된다.
 ### 인스타그램
 ![Image](https://drive.google.com/uc?export=view&id=1m09JV9mZ8kogqPdCDx0rDd3G0KethsEp)
 * 유튜브, 틱톡에 업로드되지 않은 일상 영상
@@ -99,6 +96,7 @@ excerpt: "초보 유튜버의 기록"
 각 플랫폼별로 영상 카테고리를 나눠 관리하고 있다. 
 하꼬 특성상 각자 생태계를 유지하는 듯하다. 서로의 연동 시너지는 찾아보기 어려웠다.  
 
+>다음 회고 부터는 유튜브 뿐만 아니라 틱톡, 인스타그램의 증가 분석도 추가해야겠다.
 
 ## 홍보하지 마라
 -- 이건 3달 후기에 쓰자
