--- a/it/youtube/_posts/2022-03-06-2-month.md
+++ b/it/youtube/_posts/2022-03-06-2-month.md
@@ -41,7 +41,7 @@ excerpt: "초보 유튜버의 기록"
   * 내가 업로드하기 쉬운 편집 없이 올릴 수 있는 간단한 영상을 업로드함
   * 주제와 상관없는 영상을 업로드함
 
-필자는 `기차를 처음 본 아기` 영상이 반응이 가장 좋았기 때문에 2탄으로 영상을 만들어서 유튜브와 틱톡 모두 업로드했다. 유튜브, 틱톡 모두 조회수는 1편에 비해 많이 부족하나 채널 전체의 조회수 평균보다 반응이 좋았다. 그러나 나머지 사항은 실수를 반복하는 것이 아닌가란 의구심이 있으며, 잘하고 있는가에 대한 고민이 남아 있는 상태다.
+`기차를 처음 본 아기` 영상이 반응이 가장 좋았기 때문에 2탄으로 영상을 만들어서 유튜브와 틱톡 모두 업로드했다. 유튜브, 틱톡 모두 조회수는 1편에 비해 많이 부족하나 채널 전체의 조회수 평균보다 반응이 좋았다. 그러나 나머지 사항은 실수를 반복하는 것이 아닌가란 의구심이 있으며, 잘하고 있는가에 대한 고민이 남아 있는 상태다.
 
 
 ## 타 채널 분석
@@ -59,7 +59,7 @@ excerpt: "초보 유튜버의 기록"
 아직은 분석이 더 필요하지만 결과는 조금은 긍정적인 듯 하다. 인트로 영상은 1분 이상 영상에만 삽입했고,  
 1분 이상 영상은 2개 정도만 업로드하였다. 나머지 영상은 Shorts이기 때문에 인트로 영상이 없다.  
 
-하지만 1분 이상 영상에서 구독자분이 늘어남을 느꼈다. 그래서 효과가 있다고 생각했다.
+인트로가 삽입 된 영상에서 구독자분이 늘어남을 느꼈다. 그래서 효과가 있다고 생각했다.
 앞으로도 Shorts 3~5회 업로드 후 1분 이상 영상을 업로드하는 전략으로 진행할 예정이다.
 
 ### 편집 툴
@@ -73,9 +73,9 @@ excerpt: "초보 유튜버의 기록"
   * 이미지 배경 제거
 
 ## Shorts
-필자는 Shorts영상을 위주로 업로드 중이다. 평균 3~5회 Shorts 업로드 이후 1분 이상의 영상을 1회 업로드를 반복하고 있다.  
+Shorts영상을 위주로 업로드 중이다. 평균 3~5회 Shorts 업로드 이후 1분 이상의 영상을 1회 업로드를 반복하고 있다.  
 
-필자의 채널은 조회수도 적고, 구독자도 적기 때문에 유튜브가 밀어주고 있는 Shorts를 믿고 최대한 많은 노출을 하는 전략이다. 또한, 1분 이상의 영상을 편집할 능력도, 소스도 부족하기 때문에 조금씩 연습을 하고 있다.  
+현재 채널의 조회수도 적고, 구독자도 적기 때문에 유튜브가 밀어주고 있는 Shorts를 믿고 최대한 많은 노출을 하는 전략이다. 또한, 1분 이상의 영상을 편집할 능력도, 소스도 부족하기 때문에 조금씩 연습을 하고 있다.  
 
 어떤 주제로 1분 이상 영상을 제작할지 고민하며 기획하고 있다.  
 
