[Fix] 글을 문단 단위로 나눔

--- a/it/youtube/_posts/2022-03-06-2-month.md
+++ b/it/youtube/_posts/2022-03-06-2-month.md
@@ -26,12 +26,21 @@ excerpt: "초보 유튜버의 기록"
 구독자 200명을 달성했다. 현재는 204명이다. 구독자 분들께 너무 감사하다.
 
 ![Image](https://drive.google.com/uc?export=view&id=1cinUycR9iQ2wpVZRv0hFjhjtkCueozaf)  
-구독자 추세이다. 2022-02-10은 구독자가 이탈했으며, 2022-02-15일부터 거의 바닥으로 0명에 수렴했다.  
+* 구독자 추세 그래프 
+  * 2022-02-10
+    * 구독자 이탈
+  * 2022-02-15
+    * 거의 바닥으로 0명에 수렴  
 영상 업로드도 주춤했다. 하지만 좌절하지 않고 계속 1일 1영상을 의식하고 업로드했다. 눈에 띄는 정도는 아니지만 이후 다시 구독자가 증가했다.   
  
 ### 주회수 추세
 ![Image](https://drive.google.com/uc?export=view&id=1L1de8qap8VneteRy46qkexUbY6GWDvai)  
-유튜브 알고리즘은 어떤 영상은 업로드 이후 24시간 이후부터 48시간까지 Shorts피드에 노출을 시켜줘서 200~800 조회수가 나왔다. 하지만 다른 영상은 일주일이 지나도 노출이 안되어 10~20 조회수를 기록하며 반응이 없었다.  
+* 반응이 있는 유튜브 알고리즘이 밀어준(?) 영상
+  * 업로드 이후 24시간 이후부터 48시간까지 Shorts피드에 노출
+  * 조회수 200~800 기록
+* 반응이 없는 다른 영상
+  * 일주일이 지나도 노출이 안됨
+  * 10~20 조회수를 기록하며 반응이 없음  
 반응 없는 영상은 재미없는 것일 수도 있으나 틱톡에서는 조회수와 좋아요가 반응 있음에도 유튜브에서는 알고리즘의 선택을 받지 못한 경우가 있었다. 틱톡과 유튜브는 확실히 이용자의 성향이나 목적이 다르다. 그래서 일까? 더 분석이 필요하다.
 
 ## 실수의 반복
@@ -55,11 +64,14 @@ excerpt: "초보 유튜버의 기록"
     * 고프로 9도 고려중이다.
 
 ## 인트로 영상 제작
-인트로 영상은 짧게 만들어 중간에 삽입했다. 여기에 `구독은 무료입니다.` 문구를 삽입하였다.  
-아직은 분석이 더 필요하지만 결과는 조금은 긍정적인 듯 하다. 인트로 영상은 1분 이상 영상에만 삽입했고,  
-1분 이상 영상은 2개 정도만 업로드하였다. 나머지 영상은 Shorts이기 때문에 인트로 영상이 없다.  
-
+* 1분 이상 영상에만 추가
+  * 인트로 영상은 짧게 약 2~3초 정도 만들어 중간에 삽입
+  * 여기에 1달 회고에서 고민한 `구독은 무료입니다.` 문구를 추가
+  * Shorts 영상에는 추가하지 않음 
+아직은 인트로가 있는 영상은 2개 정도 뿐이라 더 지켜봐야 반응이 보일 거 같다. 현재 결과는 조금은 긍정적인 듯 하다.  
 인트로가 삽입 된 영상에서 구독자분이 늘어남을 느꼈다. 그래서 효과가 있다고 생각했다.
+
+## 1분 이상 영상과 Shorts 업로드 횟수
 앞으로도 Shorts 3~5회 업로드 후 1분 이상 영상을 업로드하는 전략으로 진행할 예정이다.
 
 ### 편집 툴
