--- a/it/youtube/_posts/2022-03-06-2-month.md
+++ b/it/youtube/_posts/2022-03-06-2-month.md
@@ -60,16 +60,17 @@ excerpt: "초보 유튜버의 기록"
 * 도시오리
   * 계곡에서 힐링하는 영상이 너무 좋았다. 아이와 여행 가서 비슷한 영상을 꼭 만들어 보고 싶다.
   * 물속 영상을 자유롭게 찍으려면 어떻게 해야 하나 찾아봤다. 올해 여름이 오기 전에 장비를 구매해야겠다.
-    * [<i class="fas fa-link"></i> 소니 RX100 + 전용 방수 하우징 MPK-URX100A](https://lazion.com/2513078){:target="_blank"}이 가장 마음에 들었다.
-    * 고프로 9도 고려중이다.
+    * 고프로를 고려 중이다.
 
 ## 인트로 영상 제작
 * 1분 이상 영상에만 추가
   * 인트로 영상은 짧게 약 2~3초 정도 만들어 중간에 삽입
   * 여기에 1달 회고에서 고민한 `구독은 무료입니다.` 문구를 추가
   * Shorts 영상에는 추가하지 않음 
-아직은 인트로가 있는 영상은 2개 정도 뿐이라 더 지켜봐야 반응이 보일 거 같다. 현재 결과는 조금은 긍정적인 듯 하다.  
-인트로가 삽입 된 영상에서 구독자분이 늘어남을 느꼈다. 그래서 효과가 있다고 생각했다.
+
+* 아직은 인트로가 있는 영상은 2개 정도 뿐이라 더 지켜봐야 반응이 보일 거 같다. 
+  * 현재 결과는 조금은 긍정적인 듯 하다.
+  * 인트로가 삽입 된 영상에서 구독자분이 늘어남을 느꼈다. 
 
 ## 1분 이상 영상과 Shorts 업로드 횟수
 앞으로도 Shorts 3~5회 업로드 후 1분 이상 영상을 업로드하는 전략으로 진행할 예정이다.
