[Image] 이미지 추가

--- a/clean/health/_posts/2021-10-11-no-smoke.md
+++ b/clean/health/_posts/2021-10-11-no-smoke.md
@@ -31,6 +31,8 @@ depth:
 금연은 여러 가지 방법이 있다.  
 필자의 경우 복용 약을 통해 금연을 시작하였는데 약 복용 후 구역질, 매스꺼움의 부작용이 발생했다.  
 
+![Image](https://drive.google.com/uc?export=view&id=1SZ9GwaoX9rzQNyqw8ZcxrtwMfLzzqcmT)  
+
 약 복용 이후 첫 한주는 일을 못할 정도로 힘들었다. 만약 금연 결심을 했고 복용 약을 처방 받았다면, 업무일이 아닌 금요일이나 휴일을 잘 계산해서 전략을 짜는 게 좋을 듯하다.
 
 부작용에 대해 검색을 통해 알아본 결과 복용 후 며칠이 지나면 적응하여 매스꺼움 등은 줄어든다고 한다.  
