[Post] 유튜브 3달 운영 회고 글 작성 시작

--- a/it/youtube/_posts/2022-02-09-1-month.md
+++ b/it/youtube/_posts/2022-02-09-1-month.md
@@ -3,7 +3,7 @@ sidebar:
   title: "IT"
   nav: sidebar-it
   icon: "fas fa-mobile-alt"
-title: "[YouTube] 채널 1달 운영 회고"
+title: "[YouTube] 채널 운영에 항상 하는 실수"
 toc: false
 toc_sticky: true
 toc_label: 목차
@@ -12,7 +12,7 @@ header:
   overlay_color: "#000"
   overlay_filter: "0.5"
   overlay_image: https://images.roa.ai/articles/2020/02/youtube.png
-excerpt: "초보 유튜버의 기록"
+excerpt: "채널 1달 운영 회고"
 ---
 가장 먼저, 유튜브를 운영하는 유튜버나 편집, 기획자가 엄청 대단하다는 것을 느꼈다.  
 정말 엄청나고 대단하다. 유튜브 시장이 절대 만만하지 않고, 사람의 마음을 잡는다는 것이 너무나도 어렵다.
