[Fix] 유튜브 채널 운영 - 타이틀 변경

--- a/it/youtube/_posts/2022-02-09-1-month.md
+++ b/it/youtube/_posts/2022-02-09-1-month.md
@@ -3,7 +3,7 @@ sidebar:
   title: "IT"
   nav: sidebar-it
   icon: "fas fa-mobile-alt"
-title: "[YouTube] 채널 운영에 항상 하는 실수"
+title: "[YouTube] 채널 운영 실수와 반복"
 toc: false
 toc_sticky: true
 toc_label: 목차
