--- a/it/youtube/_posts/2022-03-06-2-month.md
+++ b/it/youtube/_posts/2022-03-06-2-month.md
@@ -3,7 +3,7 @@ sidebar:
   title: "IT"
   nav: sidebar-it
   icon: "fas fa-mobile-alt"
-title: "[YouTube] 틱톡과 인스타 연동의 고찰"
+title: "[YouTube] 틱톡, 인스타 연동하면 채널 효과가 있을까?"
 toc: false
 toc_sticky: true
 toc_label: 목차
