[Fix] 문구 수정 - 유튜브 영상 제목 제거

--- a/it/youtube/_posts/2022-03-06-2-month.md
+++ b/it/youtube/_posts/2022-03-06-2-month.md
@@ -50,7 +50,7 @@ excerpt: "채널 2달 운영 회고"
   * 내가 업로드하기 쉬운 편집 없이 올릴 수 있는 간단한 영상을 업로드함
   * 주제와 상관없는 영상을 업로드함
 
-`기차를 처음 본 아기` 영상이 반응이 가장 좋았기 때문에 2탄으로 영상을 만들어서 유튜브와 틱톡 모두 업로드했다. 유튜브, 틱톡 모두 조회수는 1편에 비해 많이 부족하나 채널 전체의 조회수 평균보다 반응이 좋았다. 그러나 나머지 사항은 실수를 반복하는 것이 아닌가란 의구심이 있으며, 잘하고 있는가에 대한 고민이 남아 있는 상태다.
+가장 조회수가 많은 영상이 참여도 반응이 가장 좋았기 때문에 2탄으로 영상을 만들어서 유튜브와 틱톡 모두 업로드했다. 유튜브, 틱톡 모두 조회수는 1편에 비해 많이 부족하나 채널 전체의 조회수 평균보다 반응이 좋았다. 그러나 나머지 사항은 실수를 반복하는 것이 아닌가란 의구심이 있으며, 잘하고 있는가에 대한 고민이 남아 있는 상태다.
 
 
 ## 타 채널 분석
