[Fix] 미완성 글 목록 3month 로 이동, 문구 변경 등

--- a/it/youtube/_posts/2022-01-23-subscribe-100.md
+++ b/it/youtube/_posts/2022-01-23-subscribe-100.md
@@ -55,10 +55,14 @@ excerpt: "초보 유튜버의 기록"
 
 ### 시청자와의 소통
 시청자의 댓글이 많지 않다. 당연히 소중한 댓글이기에 하나하나 좋아요와 답글을 달아주었다.  
-갑자기 밀려오는 시기엔 답글을 놓친 영상도 있지만, 좋아요는 100% 모두 눌렀다.
+갑자기 밀려오는 시기엔 답글을 놓친 영상도 있지만, 좋아요 100% 모두 누르려고 노력했다.
 
 크리에이터가 반응해주면 시청자는 설정에 따라 알림이 갈 것이고 재 방문할 가능성이 높아질 것이다.  
->실 사례가 있는데, 틱톡에서 답글을 친절하게 남겨드렸더니 바로 팔로우를 하셨다.
+>실 사례가 있는데, 틱톡에서 답글을 친절하게 남겨드렸더니 바로 팔로우를 하셨다.<br/>
+다만 업로드 시 시간대에 따른 알림을 조심해야 하는데, 한번은 새벽시간에 영상 공개를 진행 했을 시, 알림을 받자마자 구독을 해지하는 사태가 벌어졌다.<br/>
+이는 구독자를 고려하지 않은 시청시간에 공개와 동시에 알림까지 기본으로 켜져있음을 몰랐던 필자의 탓이다.<br/>
+잊지 말자. 나는 하꼬 유튜버다. 이렇게 하나하나 배워간다.<br/>
+하지만 이건 경험이 없는 하꼬의 추측일 뿐이다. 유튜브에서 구독자의 미 활동 시간에 알림을 즉시 보내지는 않을 것 같은데...
 
 ## 꾸준함
 필자는 조회수가 없을때도 영상 제작을 해서 내 채널의 조회수를 확인하지 않았다. 그 시간에 아이디어를 찾고 편집하고 영상을 지속적으로 업로드 했다.
@@ -84,7 +88,7 @@ excerpt: "초보 유튜버의 기록"
 필자의 영상은 대부분 shorts 영상이며 30초가 안되는 영상이 대부분이라 빠르게 편집하여 올릴 수 있는 것이 장점이다.
 직장인이면서 취미로 유튜브를 하는 거라 많은 시간을 들일 수는 없지만 퇴근 후 남는 시간과 주말을 최대한 활용 했다.
 
-> 삭제한 영상은 틱톡 로고가 있는 영상이었다. 유튜브에 올리지 말자. 추후 걸림돌이 된다고 한다.
+> 삭제한 영상은 틱톡 로고가 있는 영상이었다. 유튜브에 올리지 말자. 추후 Shorts 선정 수익에 걸림돌이 된다고 한다.
 
 ## 좋은 컨텐츠
 필자도 좋은 컨텐츠가 무엇인지 잘 모른다. 그런데 좋은 컨텐츠는 구글, 틱톡 등의 알고리즘이 잘 캐치한다.    
@@ -95,44 +99,6 @@ excerpt: "초보 유튜버의 기록"
 
 좋은 컨텐츠를 모르는데 그럼 어떻게 좋은 컨텐츠를 만들어야 하나? 란 고민이 생긴다.  
 필자의 경우 양 플랫폼에서 조회수가 잘 올라가는 영상과 비슷한 컨셉의 영상을 제작하려고 한다.    
-
-## 꾸미자
-다른 유튜버의 정보에서 많이 공감한 것인데, 채널을 꾸며야 한다. 다른 사람이 봤을 때 이 채널은 `뭐가 있긴 있네?` 하는 정도로 꾸며야 한다. 
-### 영상을 늘리자.
--- 쓰자
- 
-### 베너를 꾸미자.
--- 쓰자  
-![Image](https://drive.google.com/uc?export=view&id=16FXEj4LZDIERcpl8UUz1qYEKOZGp_aJm)   
- 
-### 아이콘을 꾸미자.
--- 쓰자  
-![Image](https://drive.google.com/uc?export=view&id=1qIk73oDfJPzZ_IMbsFbkv8H5-1c7Q2XQ)  
- 
-### 미리보기를 꾸미자.
-![Image](https://drive.google.com/uc?export=view&id=11J01XTqgtnJ3-dbeCYoJj2l2z50hmLkd)  
-유튜브 메인 페이지다. 어떤 미리보기가 눈에 띄는가? 
-
-식당에 있는메뉴판을 보는 듯 하다. 눈에 띄어야 한다.
--- 쓰자
-
-### 영상에 효과음을 넣자.
--- 쓰자
-
-### 영상에 배경음을 넣자.
--- 쓰자
-
-### 영상에 효과를 주자.
--- 쓰자
-
-
-
-## 첫 영상
--- 쓰자
-
--- 쓰자
-## 제목을 잘 짓자. - 표본이론
--- 쓰자
 
 ![Image](https://drive.google.com/uc?export=view&id=1R-TaJDhfz4Taw1k5yO7joyD-B683w-NL)  
 다시 한번 구독을 해주신 구독자 분들께 감사의 마음을 전한다.  
