[Fix] 서비스 명칭 제거

--- a/ios/_posts/2022-01-07-sns-login.md
+++ b/ios/_posts/2022-01-07-sns-login.md
@@ -7,7 +7,6 @@ title: "[iOS] SNS 로그인 연동 개발"
 toc: true
 toc_sticky: true
 toc_label: 목차
-published : false
 depth: 
   - title: "iOS"
     url: /ios/
@@ -66,8 +65,8 @@ import Firebase
 final class GoogleLogIn {
     weak var target: UIViewController?
 
-    func logIn() -> Observable<ImServiceLogInParameter> {
-        return Observable<ImServiceLogInParameter>.create { observer in
+    func logIn() -> Observable<LogInParameter> {
+        return Observable<LogInParameter>.create { observer in
             guard let clientID = FirebaseApp.app()?.options.clientID,
                   let presenting = self.target else {
                       // Error
@@ -110,7 +109,7 @@ import PIDThirdPartyAuth
 class PaycoSDKConfig: NSObject, PIDThirdPartyAuthDelegate {
     private let config = PIDAuthThirdConfig()
     static let shared = PaycoSDKConfig()
-    var onSuccess: ((ImServiceLogInParameter) -> Void)?
+    var onSuccess: ((LogInParameter) -> Void)?
 
     private override init() {
         super.init()
@@ -158,9 +157,9 @@ class PaycoSDKConfig: NSObject, PIDThirdPartyAuthDelegate {
 final class PaycoLogIn: SnsLogInType {
     private let config = PaycoSDKConfig.shared
     weak var target: UIViewController?
-    func logIn() -> Observable<ImServiceLogInParameter> {
+    func logIn() -> Observable<LogInParameter> {
         PIDThirdPartyAuth.openLoginView()
-        return Observable<ImServiceLogInParameter>.create { observer in
+        return Observable<LogInParameter>.create { observer in
             self.config.onSuccess = { parameters in
                 observer.onNext(parameters)
             }
@@ -187,8 +186,8 @@ final class AppleLogIn: NSObject {
     static let shared = AppleLogIn()
 
     weak var target: UIViewController?
-    var onSuccess: ((ImServiceLogInParameter) -> Void)?
-    func logIn() -> Observable<ImServiceLogInParameter> {
+    var onSuccess: ((LogInParameter) -> Void)?
+    func logIn() -> Observable<LogInParameter> {
         let appleIDProvider = ASAuthorizationAppleIDProvider()
         let request = appleIDProvider.createRequest()
         request.requestedScopes = [.email]
@@ -197,7 +196,7 @@ final class AppleLogIn: NSObject {
         authorizationController.delegate = self
         authorizationController.presentationContextProvider = self
         authorizationController.performRequests()
-        return Observable<ImServiceLogInParameter>.create { observer in
+        return Observable<LogInParameter>.create { observer in
             self.onSuccess = { parameter in
                 observer.onNext(parameter)
             }
@@ -247,7 +246,7 @@ import KakaoSDKUser
 final class KakaoLogIn {
     weak var target: UIViewController?
 
-    func logIn() -> Observable<ImServiceLogInParameter> {
+    func logIn() -> Observable<LogInParameter> {
         return Observable.create { observer in
             // 카카오톡 설치 여부 확인
             if UserApi.isKakaoTalkLoginAvailable() {
@@ -286,7 +285,7 @@ import FBSDKLoginKit
 final class FacebookLogIn {
     weak var target: UIViewController?
 
-    func logIn() -> Observable<ImServiceLogInParameter> {
+    func logIn() -> Observable<LogInParameter> {
         return Observable.create { observer in
             let loginManager = LoginManager()
             loginManager.logIn(permissions: ["email"], from: self.target) { result, error in
@@ -314,33 +313,33 @@ final class FacebookLogIn {
 ## Login을 Rx로 Wrapping
 ```swift
 extension Observable {
-    func facebookLogIn(target: UIViewController) -> Observable<ImServiceLogInParameter> {
-        return flatMap { _ -> Observable<ImServiceLogInParameter> in
+    func facebookLogIn(target: UIViewController) -> Observable<LogInParameter> {
+        return flatMap { _ -> Observable<LogInParameter> in
             return FacebookLogIn(target: target).logIn()
         }
     }
 
-    func kakaoLogIn(target: UIViewController) -> Observable<ImServiceLogInParameter> {
-        return flatMap { _ -> Observable<ImServiceLogInParameter> in
+    func kakaoLogIn(target: UIViewController) -> Observable<LogInParameter> {
+        return flatMap { _ -> Observable<LogInParameter> in
             return KakaoLogIn(target: target).logIn()
         }
     }
 
-    func googleLogIn(target: UIViewController) -> Observable<ImServiceLogInParameter> {
-        return flatMap { _ -> Observable<ImServiceLogInParameter> in
+    func googleLogIn(target: UIViewController) -> Observable<LogInParameter> {
+        return flatMap { _ -> Observable<LogInParameter> in
             return GoogleLogIn(target: target).logIn()
         }
     }
     @available(iOS 13.0, *)
-    func appleLogIn(target: UIViewController) -> Observable<ImServiceLogInParameter> {
-        return flatMap { _ -> Observable<ImServiceLogInParameter> in
+    func appleLogIn(target: UIViewController) -> Observable<LogInParameter> {
+        return flatMap { _ -> Observable<LogInParameter> in
             AppleLogIn.shared.target = target
             return AppleLogIn.shared.logIn()
         }
     }
 
-    func paycoLogIn(target: UIViewController) -> Observable<ImServiceLogInParameter> {
-        return flatMap { _ -> Observable<ImServiceLogInParameter> in
+    func paycoLogIn(target: UIViewController) -> Observable<LogInParameter> {
+        return flatMap { _ -> Observable<LogInParameter> in
             return PaycoLogIn(target: target).logIn()
         }
     }
