[Post] 홍보하지 마라 추가

--- a/it/youtube/_posts/2022-03-30-3-month.md
+++ b/it/youtube/_posts/2022-03-30-3-month.md
@@ -22,11 +22,12 @@ excerpt: "채널 3달 운영 회고"
 https://support.google.com/youtube/answer/11912632?p=youtube_analytics_tips&visit_id=637843711200332089-1906177740&rd=1
 
 ## 홍보하지 마라
--- 이건 3달 후기에 쓰자
+매우 조심해야 한다. 유튜버 관련 네이버 카페에 가입해서 채널 홍보를 했다. 그런데 결과는 의외였다. 싫어요 갯수가 더 빈도있게 클릭 되었다.  
+이 내용은 매우 조심스럽지만 홍보하는 것도 선택이다. 분명 홍보를 통해 효과를 보고 싫어요가 없는 채널도 있을 것이다. 필자의 경우는 싫어요의 빈도수가 확인히 올라오고, 구독을 통해 영상이 올라오자 마자 싫어요를 누르는 사태가 벌어졌다. 이와 같은 사례에 대해 홍보를 통해 싫어요가 생기는 이유와 과거 글을 카페에서 감색해 보았다. 홍보릁 했을 시 유사 카테고리의 다른 유튜버가 싫어요를 의도적으로 누른다는 글이 종종 보였다. 서로 도와주기는 너무 각박한 세상이 아닌가 싶다. 하꼬 유튜버에겐 싫어요 1개가 엄청나기 때문에 힘들기 마련이다. 하지만 굴복하지 않고 홍보하는 것도 방법이다. 필자는 홍보하지 않고 일부러 카페 조항과 다르게 카페 닉네임과 유튜브 채널은 다르게 설정 했다. 카페 글을 보면 구독자나 높은 조회수를 가진 유튜버들의 글을 볼 수 있는데, 대부분 닉네임과 유튜브 채널 이름을 매칭 시키지 않았다. 분명 이름만으로 홍보 효과가 있을 거라고 생각이 들지만 그렇게 하지 않은 이유는 분명 있을 것이다.
 
-## 공개 상태 - 예약됨
+## 예약 기능을 활용하자.
 유튜브는 영상 업로드 시 SD -> HD/4K 순으로 처리를 한다.
-예약을 주로 쓰는 편인데 이럴 때 사용한다.
+저장 시 `공개 상태 - 예약됨`으로 저장 할 수 있는데 이럴 때 사용한다.
 * 영상이 HD이상의 화질이며 고화질로 시청자가 시청하게 하고 싶다. 
 * 업로드 시간이 너무 늦은 새벽이다. 오전에 공개 하고 싶다.
 
