[Fix] 비공개 처리 - 글 쓰는 중

--- a/it/youtube/_posts/2022-03-30-3-month.md
+++ b/it/youtube/_posts/2022-03-30-3-month.md
@@ -8,6 +8,7 @@ toc: false
 toc_sticky: true
 toc_label: 목차
 tag: "YouTube"
+published: false
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
