--- a/it/youtube/_posts/2022-04-05-3-month.md
+++ b/it/youtube/_posts/2022-04-05-3-month.md
@@ -27,7 +27,7 @@ excerpt: "채널 3달 운영 회고"
 ![Image](https://drive.google.com/uc?export=view&id=1Z41kpfAx63O1ciTnozwEsaZUQVV72-nc)  
 조회수는 잘 나오는 영상과 완전히 반응 없는 영상으로 나뉘는데, 신기하게도 Shorts 영상 중 해리포터 BGM을 넣은 영상은 올리자마자 다음날까지 조회수 3000을 돌파하였고, 기세를 몰아 2탄을 만들어 2탄 또한 2100 조회수를 달성하며, 다른 조회수 20~30되는 영상에 비해 엄청난 크고 낮음을 보여주었다.  
 
-조회수나 여러 분석을 공부해보고 싶었는데 유튜브에서 [<i class="fas fa-link"></i> YouTube 분석 팁](https://support.google.com/youtube/answer/11912632?p=youtube_analytics_tips&visit_id=637843711200332089-1906177740&rd=1){:target="_blank"}메일을 보내주었다. 해당 내용을 공부하여 다음 분석글에 추가하도록 하자.
+구독자 300 ~ 1000명의 구간은 고난의 시간이라고 많이 봤다. 앞으로 어려운 구간일 것으로 예상되는데 이를 대비하여 조회수나 여러 분석을 공부해보고 싶었는데 마침 유튜브에서 [<i class="fas fa-link"></i> YouTube 분석 팁](https://support.google.com/youtube/answer/11912632?p=youtube_analytics_tips&visit_id=637843711200332089-1906177740&rd=1){:target="_blank"}메일을 보내주었다. 해당 내용을 공부하여 다음 분석글에 추가하도록 하자.
 
 ### 틱톡 추세
 ![Image](https://drive.google.com/uc?export=view&id=1XbFN10jz1nATtaUJDE-41GN83cpWojYV)  
