[Fix] 타이틀 변경

--- a/it/youtube/_posts/2022-04-05-3-month.md
+++ b/it/youtube/_posts/2022-04-05-3-month.md
@@ -3,7 +3,7 @@ sidebar:
   title: "IT"
   nav: sidebar-it
   icon: "fas fa-mobile-alt"
-title: "[YouTube] 홍보는 조심히 하고, 예약 기능을 사용해보자"
+title: "[YouTube] 홍보는 조심히 하자"
 toc: false
 toc_sticky: true
 toc_label: 목차
@@ -15,7 +15,10 @@ header:
 excerpt: "채널 3달 운영 회고"
 ---
 3달 하꼬의 전적과 그간 운영했던 경험을 적었다. 업로드 3달째인 4월 5일은 우연하고 감사하게도 성적이 매우 좋은 날이었다.
-## 분석
+* 동영상 갯수
+  * 총 78 개
+
+
 ### 유튜브 구독자 추세
 ![Image](https://drive.google.com/uc?export=view&id=1Pi4FMenTiydI2WtI7kOqxNeqVNodHWpt)  
 전 달에 비해 더 크게 증가하였다. 퍼센트로 측정하면 감소한 것이지만, 절대수치로 봤을 땐 크게 증가했다고 생각한다. 구독해 주신 구독자 분들이 너무나 감사하다.
