--- a/it/youtube/_posts/2022-04-05-3-month.md
+++ b/it/youtube/_posts/2022-04-05-3-month.md
@@ -17,14 +17,15 @@ excerpt: "채널 3달 운영 회고"
 3달 하꼬의 전적과 그간 운영했던 경험을 적었다. 업로드 3달째인 4월 5일은 우연하고 감사하게도 성적이 매우 좋은 날이었다.
 * 동영상 갯수
   * 총 78 개
-
+앞으로는 구독자 증가를 목표로 두지 않고 영상 업로드 개수를 목표로 변경을 고려 중이다. 너무 무분별한 업로드는 영상 퀄리티를 낮추기 때문에 목표 변경은 생각중이다.
 
 ### 유튜브 구독자 추세
 ![Image](https://drive.google.com/uc?export=view&id=1Pi4FMenTiydI2WtI7kOqxNeqVNodHWpt)  
-전 달에 비해 더 크게 증가하였다. 퍼센트로 측정하면 감소한 것이지만, 절대수치로 봤을 땐 크게 증가했다고 생각한다. 구독해 주신 구독자 분들이 너무나 감사하다.
+전 달에 비해 더 크게 증가하였다. 퍼센트로 측정하면 감소한 것이지만, 절대수치로 봤을 땐 크게 증가했다고 생각한다. 구독해 주신 구독자 분들이 너무나 감사하다. 구독자 300명 돌파는 목표한 기준보다 더 빠르게 도달해 주었다.
 
 ![Image](https://drive.google.com/uc?export=view&id=1PYI1G7foKJdfTAat8YX2VlsnYGDDL8q9)  
-그래프가 1일 이전까지 표시되기 때문에 이 글을 쓰는 오늘은 추세가 아래로 다시 꺾였다. 주식 차트로 보면 쌍봉을 찍고 내려오는 그림이랄까? 좀 불안하긴 하지만 구독자 300명 돌파는 목표한 기준보다 더 빠르게 도달해 주었다.
+그래프가 1일 이전까지 표시되기 때문에 이 글을 쓰는 오늘은 추세가 아래로 다시 꺾였다.
+> 주식 차트로 보면 쌍봉을 찍고 내려오는 그림이랄까?
 
 ### 유튜브 조회수 추세
 ![Image](https://drive.google.com/uc?export=view&id=1Z41kpfAx63O1ciTnozwEsaZUQVV72-nc)  
@@ -50,6 +51,21 @@ excerpt: "채널 3달 운영 회고"
 이 내용은 매우 조심스럽지만 홍보하는 것도 선택이다. 분명 홍보를 통해 큰 효과를 보는 채널도 있을 것이다.  
 
 이와 같은 사례에 대해 `홍보를 통해 싫어요가 생기는 이유`와 과거 글을 카페에서 검색해 보았다. 홍보를 했을 시 유사 카테고리의 다른 유튜버가 싫어요를 의도적으로 누른다는 글이 종종 보였다. 서로 도와주기는 너무 각박한 세상이 아닌가 싶다. 하꼬 유튜버에겐 싫어요 1개가 크기 때문에 힘들기 마련이다. 신경 쓰지 않는 것이 방법이다. 필자는 홍보하지 않기로 하고 일부러 카페 조항과 다르게 카페 닉네임과 유튜브 채널은 다르게 설정했다. 카페 글을 보면 구독자나 높은 조회수를 가진 유튜버들의 글을 볼 수 있는데, 대부분 닉네임과 유튜브 채널 이름을 매칭 시키지 않았다. 분명 이름만으로 홍보 효과가 있을 거라고 생각이 들지만 그렇게 하지 않은 이유는 분명 있을 것이다.
+
+### 싫어요에 대처하는 마음 가짐
+싫어요가 터치되는 이유는 시청자의 관심의 영역이기도 하다. 업로드하기 전 `이 영상은 싫어요가 생기겠다.` 생각되는 영상은 반드시 싫어요가 생겼다. 싫어요에 너무 상처받지 않고 무덤덤하게 넘어가되, 개선할 점은 있는지 더 생각해보고 있다.  
+
+특히 낮은 조회수나 낮은 구독자 채널은 더 싫어요가 쉽게 눌리는 통계가 있다고 한다. 시청자는 대형 유튜버의 영상보단 더 쉽게 누른다는 것이다. 
+
+시청자 입장에서 싫어요를 누르는 사례를 검색해봤을 때
+1. 영상 자체가 정말 별로다.
+2. 관심의 증거다 더 개선해라.
+2. 좋아요 100개 싫어요 0개 영상이네? 내가 싫어요 1개 최초로 눌러야지(변태)
+3. 영상이 마음에 들지 않는데 채널도 가벼운 채널이군 -> 쉽게 싫어요를 누르게 된다.
+
+이 정도로 검색 결과를 정리했다. 2번과 3번은 이를 사전에 방지할 수 있는 방법을 찾아보았을 때, 조회수가 일정 수치 이상 올라오지 않은 영상은 좋아요, 싫어요 개수를 비노출하는 것이다.  
+
+이후 조회수가 증가된 상태, 영상에 대한 평가가 어느 정도 이루어졌을 때 좋아요, 싫어요 숫자를 공개로 변경하는 것도 방법이겠다.
 
 ### 블로그에서 홍보
 필자의 블로그 또한 유튜브 링크나 자칫 홍보로 보일 수 있는 채널을 유추할 수 있는 내용과 이미지 등을 제거했다. 블로그 글과 유튜브 영상은 전혀 다른 내용이기 때문에 호기심에 채널에 유입되더라도 구독으로 이어지는 것은 매우 확률이 낮다는 계산이며, 영상은 영상으로 보여줘야 한다고 생각했다. 그래야 유튜브도 `찐 팬이 생기지 않을까?`라는 생각이다.
