--- a/it/youtube/_posts/2022-04-05-3-month.md
+++ b/it/youtube/_posts/2022-04-05-3-month.md
@@ -14,14 +14,15 @@ header:
   overlay_image: https://images.roa.ai/articles/2020/02/youtube.png
 excerpt: "채널 3달 운영 회고"
 ---
-3달 하꼬의 전적과 그간 운영했던 경험을 적었다. 업로드 3달째인 4월 5일은 우연하고 감사하게도 성적이 매우 좋은 날이었다.
+3달 하꼬의 전적과 그간 운영했던 경험을 적었다. 업로드 3달째인 4월 5일은 우연하고 감사하게도 성적이 매우 좋은 날이었다.  
+ 
+앞으로는 구독자 증가를 목표로 두지 않고 영상 업로드 개수를 목표로 변경을 고려 중이다. 너무 무분별한 업로드는 영상 퀄리티를 낮추기 때문에 목표 변경은 생각중이다.  
 * 동영상 갯수
   * 총 78 개
-앞으로는 구독자 증가를 목표로 두지 않고 영상 업로드 개수를 목표로 변경을 고려 중이다. 너무 무분별한 업로드는 영상 퀄리티를 낮추기 때문에 목표 변경은 생각중이다.
 
 ### 유튜브 구독자 추세
 ![Image](https://drive.google.com/uc?export=view&id=1Pi4FMenTiydI2WtI7kOqxNeqVNodHWpt)  
-전 달에 비해 더 크게 증가하였다. 퍼센트로 측정하면 감소한 것이지만, 절대수치로 봤을 땐 크게 증가했다고 생각한다. 구독해 주신 구독자 분들이 너무나 감사하다. 구독자 300명 돌파는 목표한 기준보다 더 빠르게 도달해 주었다.
+퍼센트로 측정하면 감소한 것이지만, 절대수치로 봤을 땐 전 달에 비해 크게 증가했다고 생각한다. 구독해 주신 구독자 분들이 너무나 감사하다. 구독자 300명 돌파는 목표한 기준보다 더 빠르게 도달해 주었다. 특히나 우상향 중이라는 것에 감사하다.
 
 ![Image](https://drive.google.com/uc?export=view&id=1PYI1G7foKJdfTAat8YX2VlsnYGDDL8q9)  
 그래프가 1일 이전까지 표시되기 때문에 이 글을 쓰는 오늘은 추세가 아래로 다시 꺾였다.
