--- a/it/youtube/_posts/2022-04-05-3-month.md
+++ b/it/youtube/_posts/2022-04-05-3-month.md
@@ -53,7 +53,9 @@ excerpt: "채널 3달 운영 회고"
 
 이 내용은 매우 조심스럽지만 홍보하는 것도 선택이다. 분명 홍보를 통해 큰 효과를 보는 채널도 있을 것이다.  
 
-이와 같은 사례에 대해 `홍보를 통해 싫어요가 생기는 이유`와 과거 글을 카페에서 검색해 보았다. 홍보를 했을 시 유사 카테고리의 다른 유튜버가 싫어요를 의도적으로 누른다는 글이 종종 보였다. 서로 도와주기는 너무 각박한 세상이 아닌가 싶다. 하꼬 유튜버에겐 싫어요 1개가 크기 때문에 힘들기 마련이다. 신경 쓰지 않는 것이 방법이다. 필자는 홍보하지 않기로 하고 일부러 카페 조항과 다르게 카페 닉네임과 유튜브 채널은 다르게 설정했다. 카페 글을 보면 구독자나 높은 조회수를 가진 유튜버들의 글을 볼 수 있는데, 대부분 닉네임과 유튜브 채널 이름을 매칭 시키지 않았다. 분명 이름만으로 홍보 효과가 있을 거라고 생각이 들지만 그렇게 하지 않은 이유는 분명 있을 것이다.
+이와 같이 `홍보를 통해 싫어요가 생기는 이유`의 과거 사례를 카페에서 검색해 보았다. 홍보를 했을 시 유사 카테고리의 다른 유튜버가 싫어요를 의도적으로 누른다는 글이 종종 보였다. 서로 도와주기는 너무 각박한 세상이 아닌가 싶다. 하꼬 유튜버에겐 싫어요 1개가 크기 때문에 힘들기 마련이다. 신경 쓰지 않는 것이 방법이다.  
+
+필자는 홍보하지 않기로 하고 일부러 카페 조항과 다르게 카페 닉네임과 유튜브 채널은 다르게 설정했다. 카페 글을 보면 구독자나 높은 조회수를 가진 유튜버들의 글을 볼 수 있는데, 대부분 닉네임과 유튜브 채널 이름을 매칭 시키지 않은 것을 알 수 있었다. 분명 카페 닉네임만으로 홍보 효과가 있을 거라고 생각이 들지만 대부분 그렇게 하지 않은 이유는 분명 있을 것이다.
 
 ### 싫어요에 대처하는 마음 가짐
 싫어요가 터치되는 이유는 시청자의 관심의 영역이기도 하다. 업로드하기 전 `이 영상은 싫어요가 생기겠다.` 생각되는 영상은 반드시 싫어요가 생겼다. 싫어요에 너무 상처받지 않고 무덤덤하게 넘어가되, 개선할 점은 있는지 더 생각해보고 있다.  
