--- a/it/youtube/_posts/2022-04-05-3-month.md
+++ b/it/youtube/_posts/2022-04-05-3-month.md
@@ -77,8 +77,8 @@ excerpt: "채널 3달 운영 회고"
 
 ## 예약 기능을 활용하자.
 ### 영상의 용량이 크다면?
-ProRes로 영상을 만들면 영상 크기가 매우 커지는데, 4K 60 fps 기준 3분 영상이 40~50기가 정도 된다.  
-이는 [<i class="fas fa-link"></i> Apple의 Compressor 4](https://apps.apple.com/kr/app/compressor/id424390742?mt=12){:target="_blank"}로 품질을 유지하며 용량을 줄여 해결이 가능한데, 필자는 아직 이 프로그램을 활용할 능력이 안된다. 40시가 영상을 업로드했을 시 업로드 평균 1시간, 유튜브에서 HD, 4K 처리 약 2시간 소요되며, 공개까지 총 3시간의 시간이 필요하다.  
+ProRes로 영상을 만들면 영상 크기가 매우 커지는데, 4K 60 fps 기준 3분 영상이 40~50GB 정도 된다.  
+이는 [<i class="fas fa-link"></i> Apple의 Compressor 4](https://apps.apple.com/kr/app/compressor/id424390742?mt=12){:target="_blank"}로 품질을 유지하며 용량을 줄여 해결이 가능한데, 필자는 아직 이 프로그램을 활용할 능력이 안된다. 40GB 영상을 업로드했을 시 업로드 평균 1시간, 유튜브에서 HD, 4K 처리 약 2시간 소요되며, 공개까지 총 3시간의 시간이 필요하다.  
 ![Image](https://drive.google.com/uc?export=view&id=1CyH_48jfPYDMSvmlhOeBpjgAg3K4jnAJ)  
  
 ### 유튜브는 영상 업로드 시 SD -> HD/4K 순으로 처리를 한다
