[Post] 이미지 추가

--- a/clean/think/_posts/2018-09-05-today.md
+++ b/clean/think/_posts/2018-09-05-today.md
@@ -26,6 +26,8 @@ depth:
 오늘 따라 일이 적다.  
 드라마 참 재밌다. 오늘은 놀자!
 
+![Image](https://drive.google.com/uc?export=view&id=1XjXEBGoW1py9SuXPiStthRNqJEyYPJDG)  
+
 ## 오늘 하는 일이 재밌었는가? 
 내가 평소 기대했던 멋진 일이 오늘 할 일은 아닐 수 있다.  
 매일 재미있는 일이 있으면 좋겠으나 그런 일은 드물다.
