--- a/it/youtube/_posts/2022-04-05-3-month.md
+++ b/it/youtube/_posts/2022-04-05-3-month.md
@@ -28,7 +28,7 @@ excerpt: "채널 3달 운영 회고"
 그래프가 1일 이전까지 표시되기 때문에 이 글을 쓰는 오늘은 추세가 아래로 다시 꺾였다.
 > 주식 차트로 보면 쌍봉을 찍고 내려오는 그림이랄까?
 
-구독자 300 ~ 1000명의 구간은 고난의 시간이라고 많이 봤다. 앞으로 어려운 구간일 것으로 예상되는데 이를 대비하여 여러 분석을 공부해보고 싶었는데 마침 유튜브에서 [<i class="fas fa-link"></i> YouTube 분석 팁](https://support.google.com/youtube/answer/11912632?p=youtube_analytics_tips&visit_id=637843711200332089-1906177740&rd=1){:target="_blank"} 메일을 보내주었다. 해당 내용을 공부하여 다음 분석글에 추가하도록 하자.
+구독자 300 ~ 1000명의 구간은 고난의 시간이라고 많이 봤다. 앞으로 어려운 구간일 것으로 예상되는데 이를 대비하여 여러 분석을 공부해보고 싶었다. 마침 유튜브에서 [<i class="fas fa-link"></i> YouTube 분석 팁](https://support.google.com/youtube/answer/11912632?p=youtube_analytics_tips&visit_id=637843711200332089-1906177740&rd=1){:target="_blank"} 메일을 보내주었다. 해당 내용을 공부하여 다음 분석글에 추가하도록 하자.
 
 ### 유튜브 조회수 추세
 ![Image](https://drive.google.com/uc?export=view&id=1Z41kpfAx63O1ciTnozwEsaZUQVV72-nc)  
@@ -62,10 +62,10 @@ excerpt: "채널 3달 운영 회고"
 시청자 입장에서 싫어요를 누르는 사례를 검색해봤을 때
 1. 영상 자체가 정말 별로다.
 2. 관심의 증거다 더 개선해라.
-2. 좋아요 100개 싫어요 0개 영상이네? 내가 싫어요 1개 최초로 눌러야지(변태)
-3. 영상이 마음에 들지 않는데 채널도 가벼운 채널이군 -> 쉽게 싫어요를 누르게 된다.
+3. 좋아요 100개 싫어요 0개 영상이네? 내가 싫어요 1개 최초로 눌러야지(변태)
+4. 영상이 마음에 들지 않는데 채널도 가벼운 채널이군 -> 쉽게 싫어요를 누르게 된다.
 
-이 정도로 검색 결과를 정리했다. 2번과 3번은 이를 사전에 방지할 수 있는 방법을 찾아보았을 때, 조회수가 일정 수치 이상 올라오지 않은 영상은 좋아요, 싫어요 개수를 비노출하는 것이다.  
+이 정도로 검색 결과를 정리했다. 2번과 3번은 이를 사전에 방지할 수 있는 방법을 찾아보았다. 조회수가 일정 수치 이상 올라오지 않은 영상은 좋아요, 싫어요 숫자를 비노출하는 것이 효과가 있다고 하여 이를 적용했다.  
 
 이후 조회수가 증가된 상태, 영상에 대한 평가가 어느 정도 이루어졌을 때 좋아요, 싫어요 숫자를 공개로 변경하는 것도 방법이겠다.
 
