--- a/git/github/_posts/2021-03-21-github-trand-2020.md
+++ b/git/github/_posts/2021-03-21-github-trand-2020.md
@@ -37,7 +37,7 @@ Objective-C의 모습이 보인다. Swift는 어딨는겨?!
 ### 각 나라별 오픈소스 사용자 증가 추이
 ![Image](https://drive.google.com/uc?export=view&id=1VbBscQYeEnkD8s8ySoh0g_od19nDRTvC)
 
-현재는 미국이 단연 1위다. 예측 자료가 재미있는데 미래에는 중국 사용자가 가장 진한색이라는 것이다.
+현재는 미국이 역시 1위다. 예측 자료가 재미있는데 미래에는 중국이 진한색
 
 
 ## 출처
