--- a/it/youtube/_posts/2022-03-06-2-month.md
+++ b/it/youtube/_posts/2022-03-06-2-month.md
@@ -33,7 +33,7 @@ excerpt: "채널 2달 운영 회고"
     * 거의 바닥으로 0명에 수렴  
 영상 업로드도 주춤했다. 하지만 좌절하지 않고 계속 1일 1영상을 의식하고 업로드했다. 눈에 띄는 정도는 아니지만 이후 다시 구독자가 증가했다.   
  
-### 주회수 추세
+### 조회수 추세
 ![Image](https://drive.google.com/uc?export=view&id=1L1de8qap8VneteRy46qkexUbY6GWDvai)  
 * 반응이 있는 유튜브 알고리즘이 밀어준(?) 영상
   * 업로드 이후 24시간 이후부터 48시간까지 Shorts피드에 노출
