[Post] 틱톡 커뮤니티 가이드 위반 사례 추가

--- a/it/youtube/_posts/2022-05-06-4-month.md
+++ b/it/youtube/_posts/2022-05-06-4-month.md
@@ -27,7 +27,7 @@ excerpt: "채널 4달 운영 회고"
 구독자 증가 추세는 점점 바닥을 다지고 있으며, 문제는 구독자의 충성도이다. 필자의 채널은 충성도가 매우 낮으며 구독을 하더라도 재 방문이 이루어지지 않았다. 아쉽지만 이제 4달밖에 안되었으며 Shorts 위주인데 Shorts도 같은 카테고리가 아니다 보니 그런 것으로 예상된다. 꾸준히 영상을 업로드하며 천천히 팬층이 만들어지면 좋겠다.
 
 ### 고난의 시간
-구독자 300 ~ 1000명의 구간은 고난의 시간이라고 한다. 다 그런 것은 아니겠지만 일반인의 채널로 1000명은 정말 큰 벽으로 느껴진다. 이전 달에 분석하기로 했던 [<i class="fas fa-link"></i> YouTube 분석 팁](https://support.google.com/youtube/answer/11912632?p=youtube_analytics_tips&visit_id=637843711200332089-1906177740&rd=1){:target="_blank"} 을 읽어보도록 해야겠다.
+구독자 300 ~ 1000명의 구간은 고난의 시간이라고 한다. 다 그런 것은 아니겠지만 일반인의 채널로 1000명은 정말 큰 벽으로 느껴진다. 이전 달에 분석하기로 했던 [<i class="fas fa-link"></i> YouTube 분석 팁](https://support.google.com/youtube/answer/11912632?p=youtube_analytics_tips&visit_id=637843711200332089-1906177740&rd=1){:target="_blank"}을 읽어보도록 해야겠다.
 
 ### 유튜브 조회수 추세
 ![Image](https://drive.google.com/uc?export=view&id=1wNsfSRiaByEXM7x5b_cqR-3MJCo2jCjw)  
@@ -46,10 +46,13 @@ excerpt: "채널 4달 운영 회고"
 * 팔로워235(+28)
 * 좋아요2936(+185)
 
+* 틱톡에서 커뮤니티 가이드라인 위반이 되었다.
+  * 가이드라인은 읽어보았으며 상식 선을 넘는 영상들이 문제였는데, 업로드해서 위반 된 영상은 `이게 위반인가?`라는 생각이 들어서 이의 제기를 했다. 영상은 삭제 되었으며 슬프게도 틱톡에서 답변은 아직 오지 않았다.
+  * [<i class="fas fa-link"></i> 콘텐츠 위반 및 정지](https://support.tiktok.com/ko/safety-hc/account-and-user-safety/content-violations-and-bans){:target="_blank"}항목을 읽어 보았고 비슷한 정지를 계속 받으면 계정에 불이익 또는 영구 삭제 될 수 있다. 필자의 계정 또한 공개 시간 대비 노출 수가 줄어 들었다.
+
 ### 인스타그램 추세
 ![Image](https://drive.google.com/uc?export=view&id=1u4TYL7R2nyPKkE-Dc85zUrcL0mMXP8mZ)  
 * 팔로워33(+3)
-
 
 ## 시청자에 대한 태도
 영상에 모든 댓글을 달아드리고 싶으나, 여건 상 안 되는 일도 있다. 크게 신경 쓰지 말자.  
