--- a/swift/closure/_posts/2019-01-03-escaping.md
+++ b/swift/closure/_posts/2019-01-03-escaping.md
@@ -16,5 +16,10 @@ depth:
     url: /swift/closure/
     icon: "far fa-folder-open"
 ---
-해당 함수의 인자로 클로저가 전달되지만, 함수가 종료되어도 실행 되는 것을 보장한다.
+## @escaping
+해당 함수의 인자로 클로저가 전달되지만, 함수가 종료되어도 실행 되는 것을 보장한다.  
 즉 함수의 scope 밖에서 실행이 가능하다.
+
+## @nonescaping
+함수의 scope 내에서만 넘겨받은 closure 동작한다.  
+별도의 어노테이션이 없으면 nonescaping 이 기본 값이다.
